# Yummy

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/code/: test.yum
docs/: MAN_SYNTAX.md
src/: CMakeLists.txt  main.cpp
src/safety/: borrow_checker.h  name_resolution.h  type_checking.h  type_inference.h
src/syntax/: ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h
src/utils/: memo_hash.h
